--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "gulp": "^3.8.10",
     "gulp-coffee": "^2.2.0",
     "gulp-less": "^2.0.1",
+    "gulp-plumber": "^0.6.6",
     "gulp-sass": "^1.2.4",
-    "gulp-util": "^3.0.1",
-    "gulp-tictail": "0.0.1"
+    "gulp-tictail": "0.0.1",
+    "gulp-util": "^3.0.1"
   }
 }
