--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {},
   "dependencies": {},
   "devDependencies": {
+    "coffee-script": "^1.8.0",
     "gulp": "^3.8.10",
     "gulp-coffee": "^2.2.0",
     "gulp-less": "^2.0.1",
