--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "^3.8.10",
     "gulp-coffee": "^2.2.0",
     "gulp-less": "^2.0.1",
+    "gulp-livereload": "^3.0.2",
     "gulp-plumber": "^0.6.6",
     "gulp-sass": "^1.2.4",
     "gulp-tictail": "0.0.1",
